# be/src/main/java/com/v2p/swp391/application/controller/LessonController.java
@@ -4,19 +4,28 @@ import com.v2p.swp391.application.model.LessonEntity;
 import com.v2p.swp391.application.request.CreateLessonRequest;
 import com.v2p.swp391.application.request.UpdateLessonRequest;
 import com.v2p.swp391.application.service.LessonService;
+import com.v2p.swp391.common.api.CoreApiResponse;
+import com.v2p.swp391.common.api.PagedResponse;
 import com.v2p.swp391.common.constant.Path;
+import com.v2p.swp391.common.swagger.LessonOperation;
+import com.v2p.swp391.common.swagger.SearchLessonsOperation;
+import com.v2p.swp391.common.swagger.StringOperation;
 import com.v2p.swp391.utils.Helpers;
 import com.v2p.swp391.utils.UploadUtils;
+import io.swagger.v3.oas.annotations.Operation;
+import io.swagger.v3.oas.annotations.media.Content;
+import io.swagger.v3.oas.annotations.media.Schema;
+import io.swagger.v3.oas.annotations.responses.ApiResponse;
 import lombok.AllArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.modelmapper.ModelMapper;
+import org.springframework.data.domain.Page;
 import org.springframework.http.MediaType;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
 
 import java.io.File;
-import java.util.List;
-import java.util.Optional;
+
 
 @Slf4j
 @AllArgsConstructor
@@ -26,11 +35,9 @@ public class LessonController {
     private final LessonService lessonService;
 
     @PostMapping(consumes = { MediaType.MULTIPART_FORM_DATA_VALUE })
-    public ResponseEntity<LessonEntity> createLesson(@ModelAttribute CreateLessonRequest request) {
+    @LessonOperation
+    public CoreApiResponse<LessonEntity> createLesson(@ModelAttribute CreateLessonRequest request) {
         ModelMapper modelMapper = new ModelMapper();
-
-
-
         LessonEntity lesson = modelMapper.map(request, LessonEntity.class);
         if(request.getImgFile() != null){
             String imgPath = UploadUtils.storeImage(request.getImgFile(), Path.LESSON_IMAGE_PATH);
@@ -47,23 +54,19 @@ public class LessonController {
         }
 
         LessonEntity createdLesson = lessonService.createLesson(lesson);
-        return ResponseEntity.ok(createdLesson);
+        return CoreApiResponse.success(createdLesson);
     }
 
     @GetMapping("/{id}")
-    public ResponseEntity<LessonEntity> getLessonById(@PathVariable Long id) {
-        Optional<LessonEntity> lesson = lessonService.getLessonById(id);
-        return lesson.map(ResponseEntity::ok).orElseGet(() -> ResponseEntity.notFound().build());
-    }
-
-    @GetMapping
-    public ResponseEntity<List<LessonEntity>> getAllLessons() {
-        List<LessonEntity> lessons = lessonService.getAllLessons();
-        return ResponseEntity.ok(lessons);
+    @LessonOperation
+    public CoreApiResponse<LessonEntity> getLessonById(@PathVariable Long id) {
+        LessonEntity lesson = lessonService.getLessonById(id);
+        return CoreApiResponse.success(lesson);
     }
 
     @PutMapping(value="/{id}", consumes = { MediaType.MULTIPART_FORM_DATA_VALUE })
-    public ResponseEntity<LessonEntity> updateLesson(@PathVariable Long id, @ModelAttribute UpdateLessonRequest request) {
+    @LessonOperation
+    public CoreApiResponse<LessonEntity> updateLesson(@PathVariable Long id, @ModelAttribute UpdateLessonRequest request) {
         ModelMapper modelMapper = new ModelMapper();
         LessonEntity lessonDetails = modelMapper.map(request, LessonEntity.class);
         if(request.getImgFile() != null){
@@ -71,20 +74,24 @@ public class LessonController {
             lessonDetails.setImgUrl(imgPath);
         }
         LessonEntity updatedLesson = lessonService.updateLesson(id, lessonDetails);
-        return ResponseEntity.ok(updatedLesson);
+        return CoreApiResponse.success(updatedLesson);
     }
 
     @DeleteMapping("/{id}")
-    public ResponseEntity<Void> deleteLesson(@PathVariable Long id) {
+    @StringOperation
+    public CoreApiResponse<String> deleteLesson(@PathVariable Long id) {
         lessonService.deleteLesson(id);
-        return ResponseEntity.noContent().build();
+        return CoreApiResponse.success("Xóa thành công");
     }
 
     @GetMapping("/search")
-    public ResponseEntity<List<LessonEntity>> searchLessons(@RequestParam(name = "keyword",required = false) String keyword,
-                                                            @RequestParam(name = "page", defaultValue = "0") int page,
-                                                            @RequestParam(name = "size", defaultValue = "10") int size) {
-        List<LessonEntity> lessons = lessonService.searchLessons(keyword, page, size);
-        return ResponseEntity.ok(lessons);
+    @SearchLessonsOperation
+    public CoreApiResponse<PagedResponse<LessonEntity>> searchLessons(
+            @RequestParam(name = "keyword",required = false) String keyword,
+            @RequestParam(name = "page", defaultValue = "0") int page,
+            @RequestParam(name = "size", defaultValue = "10") int size
+    ) {
+        Page<LessonEntity> lessons = lessonService.searchLessons(keyword, page, size);
+        return CoreApiResponse.success(new PagedResponse<>(lessons));
     }
 }
